# pogl_tp1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  image.hh  init.hh  main.cpp  matrix4.hh  obj_loader.hh  program.hh  texture_manager.hh  vec3.hh
scenes/bezier_patch/: bezier_patch.cc  bezier_patch.cs  bezier_patch.fs  bezier_patch.vs  control_points.gs  control_points.vs  mesh_creation.cs  skelet_lines.fs  skelet_lines.vs  skeleton_lines.fs  skybox.fs  skybox.vs
scenes/default/: basic.frag  basic.vert  scene-default.cc
scenes/dices/: basic.frag  basic.vert  depth.frag  depth.vert  scene-dices.cc
scenes/island/: scene-island.cc  shader.frag
scenes/particle_engine/: particle.cs  particle.fs  particle.vs  scene-particle.cc
scenes/skybox_reflection_refraction/: object_reflection_shader.frag  object_refraction_shader.frag  object_shader.frag  object_shader.vert  scene-skybox_reflection_refraction.cc  skybox_shader.frag  skybox_shader.vert
shaders/: basic.frag  basic.vert  shaders.hh
src/: camera.hh  init.hh  obj_loader.hh  program.hh  texture_manager.hh
src/primitives/: matrix4.hh  vec3.hh
src/utils/: image.hh
